[gd_scene load_steps=10 format=3 uid="uid://c05uv3ypr1134"]

[ext_resource type="Script" path="res://scenes/damageable.gd" id="1_4gxbq"]
[ext_resource type="Script" path="res://scenes/enemies/enemy.gd" id="1_qib4t"]
[ext_resource type="Texture2D" uid="uid://bo004678denqr" path="res://asssets/tmp_chaser_sprite.png" id="3_ylsbd"]
[ext_resource type="Script" path="res://scenes/damager.gd" id="4_vv03q"]
[ext_resource type="Script" path="res://scenes/enemies/boid_area.gd" id="5_jrwkx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_75d73"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bxyin"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_v5cr7"]
radius = 7.07107

[sub_resource type="CircleShape2D" id="CircleShape2D_8h046"]
radius = 70.0071

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_qib4t")

[node name="Damageable" type="Area2D" parent="."]
script = ExtResource("1_4gxbq")
max_health = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damageable"]
shape = SubResource("CircleShape2D_75d73")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("3_ylsbd")

[node name="Damager" type="Area2D" parent="."]
collision_layer = 32768
collision_mask = 32768
script = ExtResource("4_vv03q")
knockback = 2000.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damager"]
shape = SubResource("CircleShape2D_bxyin")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_v5cr7")

[node name="BoidArea" type="Area2D" parent="."]
script = ExtResource("5_jrwkx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoidArea"]
shape = SubResource("CircleShape2D_8h046")

[connection signal="died" from="Damageable" to="." method="die"]
[connection signal="area_entered" from="BoidArea" to="." method="_on_boid_area_area_entered"]
[connection signal="area_exited" from="BoidArea" to="." method="_on_boid_area_area_exited"]
